8313394: Array Elements in OldObjectSample event should be -1 if the object is not an array